--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
+        "@zeit/next-css": "^1.0.1",
         "express": "^4.16.4",
         "next": "^7.0.2",
         "react": "^16.6.0",
