--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "dependencies": {
         "@zeit/next-css": "^1.0.1",
+        "axios": "^0.18.0",
         "express": "^4.16.4",
         "next": "^7.0.2",
         "react": "^16.6.0",
