--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "next": "^7.0.2",
         "react": "^16.6.0",
         "react-autobind": "^1.0.6",
-        "react-dom": "^16.6.0"
+        "react-dom": "^16.6.0",
+        "xml-js": "^1.6.8"
     },
     "devDependencies": {},
     "scripts": {
