Added logo and changed some styles

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "axios": "^0.18.0",
         "express": "^4.16.4",
         "next": "^7.0.2",
+        "next-images": "^1.0.3",
         "react": "^16.6.0",
         "react-autobind": "^1.0.6",
         "react-dom": "^16.6.0",
